objects/CRM_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>CRM_ABN_Registered_for_past_24_months__c</fullName>
        <label>ABN Registered for past 24 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No -*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_ASIC_Banned_Disqualified__c</fullName>
        <label>ASIC Banned &amp; Disqfld. Register Search</label>
        <picklist>
            <picklistValues>
                <fullName>Clear B&amp;D on Director/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;D Listing on Director/s*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Australian_Credit_Licence_ACL__c</fullName>
        <label>Australian Credit Licence (ACL)</label>
        <picklist>
            <picklistValues>
                <fullName>ACL details saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ACL - (Make approving Mgrs aware)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Australian_Credit_Representive_ACR__c</fullName>
        <label>Australian Credit Representive (ACR)</label>
        <picklist>
            <picklistValues>
                <fullName>ACL on file - NO ACR REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Authorisation via ASIC on file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR only - Sub Authorisation on file for employees via BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR only - Directors on file - Auth not required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Comprehensive_Veda_Check__c</fullName>
        <label>Comprehensive Veda Check</label>
        <picklist>
            <picklistValues>
                <fullName>Nil Adverse history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse history*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Department_of_Foreign_Affairs__c</fullName>
        <label>Department of Foreign Affairs and Trade</label>
        <picklist>
            <picklistValues>
                <fullName>No Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show Listing*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Deposit_Slip__c</fullName>
        <label>Deposit Slip</label>
        <picklist>
            <picklistValues>
                <fullName>Received - on file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not received - Email sent to BDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Comprehensive_Veda_Check__c</fullName>
        <label>Exception Comprehensive Veda Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_External_EDR__c</fullName>
        <label>Exception External EDR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Industry_Membership__c</fullName>
        <label>Exception Industry Membership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Introducer_Agreement__c</fullName>
        <label>Exception Introducer Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Motor_Dealer_Licence__c</fullName>
        <label>Exception Motor Dealer Licence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Police_Check_Director_Only__c</fullName>
        <label>Exception Police Check**(Directors Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Exception_Training_Evidence__c</fullName>
        <label>Exception Training Evidence**</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_External_Dispute_Resolution_EDR__c</fullName>
        <label>External Dispute Resolution Evidence-EDR</label>
        <picklist>
            <picklistValues>
                <fullName>CIO Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOS Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_GST_Registered__c</fullName>
        <label>GST Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Registered*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Industry_Membership__c</fullName>
        <label>Industry Membership</label>
        <picklist>
            <picklistValues>
                <fullName>FBAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAFBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Introducer_Agreement__c</fullName>
        <label>Introducer Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Received complete full version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed - Email sent to BDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Motor_Dealer_Licence__c</fullName>
        <label>Motor Dealer Licence</label>
        <picklist>
            <picklistValues>
                <fullName>MDL - Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDL - No Listing - Email to BDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ASIC_Verification_Exception__c</fullName>
        <label>ASIC Verification Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ASIC_Verification__c</fullName>
        <label>ASIC Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Confirm_Exception__c</fullName>
        <label>New Aggregator Confirmation Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Confirmation_Received__c</fullName>
        <label>New Aggregator Confirmation Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Blacklist_Verification_Exception__c</fullName>
        <label>Blacklist Verification Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Blacklist_Verification__c</fullName>
        <label>Blacklist Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case_Status__c</fullName>
        <formula>TRIM(TEXT(CRM_Case__r.Status))</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_DFAT_Verification_Exception__c</fullName>
        <label>DFAT Verification Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_DFAT_Verification__c</fullName>
        <label>DFAT Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Old_Aggregator_Release_Exception__c</fullName>
        <label>Old Aggregator Release Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Old_Aggregator_Release_Provided__c</fullName>
        <label>Old Aggregator Release Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_PAF_Black_List_Check__c</fullName>
        <label>PAF Black List Check</label>
        <picklist>
            <picklistValues>
                <fullName>Nil Listings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show Listings*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Personal_Indemnity_Insurance__c</fullName>
        <label>Personal Indemnity Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>On file - Minimum $5 million:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received - Email to BDM:</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Police_Check_Directors_Only__c</fullName>
        <label>Police Check** (Directors Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Received for Each Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received**</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Police_Check_Users__c</fullName>
        <label>Police Check (Users Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Received for Each User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received**</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Training_Evidence__c</fullName>
        <label>Training Evidence**</label>
        <picklist>
            <picklistValues>
                <fullName>Evidence Supplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence Not Supplied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Website_Search__c</fullName>
        <label>Website Search</label>
        <picklist>
            <picklistValues>
                <fullName>Website Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow Pages Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Pages Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other:</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_ABN_Registered_for_past_24_mth__c</fullName>
        <label>Exception ABN Registered for past 24 mth</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_ASIC_Banned_Disqualified__c</fullName>
        <label>Exception ASIC Banned &amp; Disqualified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Australian_Credit_Licence_ACL__c</fullName>
        <label>Exception Australian Credit Licence(ACL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Australian_Credit_Representive__c</fullName>
        <label>Exception Australian Credit Representive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Department_of_Foreign_Affairs__c</fullName>
        <label>Exception Department of Foreign Affairs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Deposit_Slip__c</fullName>
        <label>Exception Deposit Slip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_GST_registered__c</fullName>
        <label>Exception GST registered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_PAF_Black_List_Check__c</fullName>
        <label>Exception PAF Black List Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Personal_Indemnity_Insurance__c</fullName>
        <label>Exception Personal Indemnity Insurance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Website_Search__c</fullName>
        <label>Exception Website Search</label>
        <type>TextArea</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CRM_Mtg_ASIC_Verification_Exception__c</columns>
        <columns>CRM_Mtg_ASIC_Verification__c</columns>
        <columns>CRM_Mtg_Blacklist_Verification_Exception__c</columns>
        <columns>CRM_Mtg_Blacklist_Verification__c</columns>
        <columns>CRM_Mtg_Case_Status__c</columns>
        <columns>CRM_Mtg_DFAT_Verification_Exception__c</columns>
        <columns>CRM_Mtg_DFAT_Verification__c</columns>
        <columns>CRM_Mtg_Aggregator_Confirm_Exception__c</columns>
        <columns>CRM_Mtg_Aggregator_Confirmation_Received__c</columns>
        <columns>CRM_Mtg_Old_Aggregator_Release_Exception__c</columns>
        <columns>CRM_Mtg_Old_Aggregator_Release_Provided__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <recordTypes>
        <fullName>Auto_Broker_via_Aggregator</fullName>
        <active>true</active>
        <description>CRM Auto Broker via Aggregator</description>
        <label>Auto Broker via Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Mortgage_Broker_Accreditation</fullName>
        <active>true</active>
        <description>This record type is used for Mortgage Broker Accreditation process.</description>
        <label>Mortgage Broker Accreditation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Mortgage_Broker_Transfer</fullName>
        <active>true</active>
        <label>Mortgage Broker Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Broker_Direct</fullName>
        <active>true</active>
        <label>Commercial Broker Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Broker_via_Aggregator</fullName>
        <active>true</active>
        <label>Commercial Broker via Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_channel</fullName>
        <active>true</active>
        <label>Dealer channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Auto_Broker</fullName>
        <active>true</active>
        <label>Direct Auto Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mortage_Broker_via_Aggregator</fullName>
        <active>true</active>
        <label>Mortage Broker via Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mortgage_Broker_Direct</fullName>
        <active>true</active>
        <label>Mortgage Broker Direct</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CRMOnCompleteAuto_Broker_via_Aggregator</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Auto_Broker_via_Aggregator</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Auto Broker via Aggregator&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 
ISBLANK(TEXT( CRM_Deposit_Slip__c )), 
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )), 
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) , 
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) ,
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) , 
ISBLANK(TEXT( CRM_Website_Search__c )) , 
ISBLANK(TEXT(CRM_Australian_Credit_Licence_ACL__c)) , 
ISBLANK(TEXT( CRM_Australian_Credit_Representive_ACR__c )) , 
ISBLANK(TEXT( CRM_External_Dispute_Resolution_EDR__c )) 
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMOnCompleteCommercial_Broker_Direct</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Commercial_Broker_Direct</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Commercial Broker Direct&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 
ISBLANK(TEXT( CRM_Introducer_Agreement__c )) , 
ISBLANK(TEXT( CRM_Deposit_Slip__c )), 
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )),
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) ,
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) , 
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) , 
ISBLANK(TEXT( CRM_Website_Search__c )) , 
ISBLANK(TEXT( CRM_Personal_Indemnity_Insurance__c )) 
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMOnCompleteCommercial_Broker_via_Aggre</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Commercial_Broker_via_Aggre</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Commercial Broker via Aggregator&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 

ISBLANK(TEXT( CRM_Deposit_Slip__c )), 
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )),
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) ,
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) , 
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) , 
ISBLANK(TEXT( CRM_Website_Search__c )) , 
ISBLANK(TEXT(CRM_Industry_Membership__c))  
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMOnCompleteDealer_channel</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Dealer_channel</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Dealer channel&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 
ISBLANK(TEXT( CRM_Introducer_Agreement__c )) , 
ISBLANK(TEXT( CRM_Deposit_Slip__c )),
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )), 
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) , 
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) , 
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) , 
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) , 
ISBLANK(TEXT( CRM_Website_Search__c )) ,
ISBLANK(TEXT( CRM_Motor_Dealer_Licence__c )) ,
ISBLANK(TEXT(CRM_Training_Evidence__c)) ,
ISBLANK(TEXT( CRM_Police_Check_Directors_Only__c )) 
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMOnCompleteMortage_Broker_via_Aggregat</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Mortage_Broker_via_Aggregator</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Mortage Broker via Aggregator&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 
ISBLANK(TEXT( CRM_Deposit_Slip__c )), 
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )), 
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) ,
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) , 
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) ,
ISBLANK(TEXT( CRM_Website_Search__c )) ,
ISBLANK(TEXT(CRM_Australian_Credit_Licence_ACL__c)) , 
ISBLANK(TEXT( CRM_Australian_Credit_Representive_ACR__c )) ,
ISBLANK(TEXT( CRM_External_Dispute_Resolution_EDR__c )) ,
ISBLANK(TEXT( CRM_Industry_Membership__c )) 
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMOnCompleteMortgage_Broker_Direct</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed for record type Mortgage_Broker_Direct</description>
        <errorConditionFormula>IF( 
AND( 
RecordType.Name = &quot;Mortgage Broker Direct&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR( 
ISBLANK(TEXT( CRM_Introducer_Agreement__c )),
ISBLANK(TEXT( CRM_Deposit_Slip__c )), 
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )), 
ISBLANK(TEXT( CRM_GST_Registered__c )),
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) ,
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) ,
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) ,
ISBLANK(TEXT( CRM_Website_Search__c )) ,
ISBLANK(TEXT(CRM_Australian_Credit_Licence_ACL__c)) , 
ISBLANK(TEXT( CRM_External_Dispute_Resolution_EDR__c )) ,
ISBLANK(TEXT( CRM_Industry_Membership__c )) ,
ISBLANK(TEXT( CRM_Personal_Indemnity_Insurance__c )) 
) 
) , True ,False 
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMValidateOnCompleteOnDirectAutobroker</fullName>
        <active>true</active>
        <description>All Picklist mandatory is status changes to completed</description>
        <errorConditionFormula>IF(
AND(
RecordType.Name = &quot;Direct Auto Broker&quot; , ISPICKVAL( CRM_Status__c , &quot;Completed&quot;) , 
OR(
ISBLANK(TEXT( CRM_Introducer_Agreement__c )) ,
ISBLANK(TEXT( CRM_Deposit_Slip__c )),
ISBLANK(TEXT( CRM_ABN_Registered_for_past_24_months__c )),
ISBLANK(TEXT( CRM_GST_Registered__c )),
ISBLANK(TEXT( CRM_Comprehensive_Veda_Check__c )) ,
ISBLANK(TEXT( CRM_ASIC_Banned_Disqualified__c )) ,
ISBLANK(TEXT( CRM_Department_of_Foreign_Affairs__c )) ,
ISBLANK(TEXT( CRM_PAF_Black_List_Check__c )) ,
ISBLANK(TEXT( CRM_Website_Search__c )) ,
ISBLANK(TEXT(CRM_Australian_Credit_Licence_ACL__c)) ,
ISBLANK(TEXT( CRM_Australian_Credit_Representive_ACR__c )) ,
ISBLANK(TEXT( CRM_External_Dispute_Resolution_EDR__c )) ,
ISBLANK(TEXT( CRM_Personal_Indemnity_Insurance__c )) ,
ISBLANK(TEXT( CRM_Police_Check_Directors_Only__c )) 
) 
) , True ,False
)</errorConditionFormula>
        <errorMessage>All Drop Down is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateASICPicklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
RecordType.Name = &quot;Mortgage Broker Accreditation&quot;, 
RecordType.Name = &quot;Mortgage Broker Transfer&quot;),
ISPICKVAL(CRM_Mtg_ASIC_Verification__c, &quot;No&quot;),
ISBLANK(CRM_Mtg_ASIC_Verification_Exception__c))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_ASIC_Verification_Exception__c</errorDisplayField>
        <errorMessage>ASIC Verification Exception is mandatory if selecting No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateAggReleasePicklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Mortgage Broker Transfer&quot;,
ISPICKVAL(CRM_Mtg_Old_Aggregator_Release_Provided__c, &quot;No&quot;),
ISBLANK(CRM_Mtg_Old_Aggregator_Release_Exception__c))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_Old_Aggregator_Release_Exception__c</errorDisplayField>
        <errorMessage>Old Aggregator Release Exception is mandatory if selecting No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateBlacklistPicklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
RecordType.Name = &quot;Mortgage Broker Accreditation&quot;,
RecordType.Name = &quot;Mortgage Broker Transfer&quot;),
ISPICKVAL(CRM_Mtg_Blacklist_Verification__c, &quot;No&quot;),
ISBLANK(CRM_Mtg_Blacklist_Verification_Exception__c))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_Blacklist_Verification_Exception__c</errorDisplayField>
        <errorMessage>Blacklist Verification Exception is mandatory if selecting No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateCaseOwner</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name == &apos;CRM Mortgage&apos;,
OR(RecordType.Name = &quot;Mortgage Broker Accreditation&quot;,
RecordType.Name = &quot;Mortgage Broker Transfer&quot;),
CRM_Case__r.OwnerId &lt;&gt; $User.Id
)</errorConditionFormula>
        <errorMessage>Please assign the case to yourself before working on checklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateCaseStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
RecordType.Name = &quot;Mortgage Broker Accreditation&quot;,
RecordType.Name = &quot;Mortgage Broker Transfer&quot;),
OR(
ISCHANGED(CRM_Mtg_ASIC_Verification__c),
ISCHANGED(CRM_Mtg_DFAT_Verification__c),
ISCHANGED(CRM_Mtg_Blacklist_Verification__c),
ISCHANGED(CRM_Mtg_Old_Aggregator_Release_Provided__c),
ISCHANGED(CRM_Mtg_Aggregator_Confirmation_Received__c)
),
ISPICKVAL(CRM_Status__c,&apos;Draft&apos;), 
TRIM(CRM_Mtg_Case_Status__c) != &apos;Verification In Progress&apos;
)</errorConditionFormula>
        <errorMessage>Please change the status of case to &apos;Verification In Progress&apos; first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateConfirmation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
RecordType.Name = &quot;Mortgage Broker Accreditation&quot;,
RecordType.Name = &quot;Mortgage Broker Transfer&quot;),
ISPICKVAL(CRM_Mtg_Aggregator_Confirmation_Received__c,&quot;No&quot;),
ISBLANK(CRM_Mtg_Aggregator_Confirm_Exception__c))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_Aggregator_Confirm_Exception__c</errorDisplayField>
        <errorMessage>New Aggregator Confirmation Received Exception is mandatory if selecting No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateDFATPicklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
RecordType.Name = &quot;Mortgage Broker Accreditation&quot;, 
RecordType.Name = &quot;Mortgage Broker Transfer&quot;), 
ISPICKVAL(CRM_Mtg_DFAT_Verification__c, &quot;No&quot;),
ISBLANK(CRM_Mtg_DFAT_Verification_Exception__c))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_DFAT_Verification_Exception__c</errorDisplayField>
        <errorMessage>DFAT Verification Exception is mandatory if selecting No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidatePicklistValues</fullName>
        <active>true</active>
        <description>All Picklist values are mandatory when status changes to completed</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Mortgage Broker Accreditation&quot;, ISPICKVAL(CRM_Status__c, &quot;Completed&quot;),
OR(
ISBLANK(TEXT(CRM_Mtg_ASIC_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_DFAT_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_Blacklist_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_Aggregator_Confirmation_Received__c))
))</errorConditionFormula>
        <errorMessage>All Drop Down values are Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidatePicklistValuesTransfer</fullName>
        <active>true</active>
        <description>All Picklist values are mandatory when status changes to completed</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Mortgage Broker Transfer&quot;, ISPICKVAL(CRM_Status__c, &quot;Completed&quot;),
OR(
ISBLANK(TEXT(CRM_Mtg_ASIC_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_DFAT_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_Blacklist_Verification__c)),
ISBLANK(TEXT(CRM_Mtg_Old_Aggregator_Release_Provided__c)),
ISBLANK(TEXT(CRM_Mtg_Aggregator_Confirmation_Received__c))
))</errorConditionFormula>
        <errorMessage>All Drop Down values are Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_ValidateStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;,
OR(RecordType.Name = &quot;Mortgage Broker Accreditation&quot;,
RecordType.Name = &quot;Mortgage Broker Transfer&quot;), 
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;TL&apos;)), ISPICKVAL(PRIORVALUE(CRM_Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
        <errorMessage>Record cant be modified once status is completed.</errorMessage>
    </validationRules>
</CustomObject>